scss/app.scss
@import "mixin";
@import "color";
@import "folders";

html {
  height: 100%;

  body {
    height: 100%;
    overflow: hidden;
    display: flex;
    justify-content: flex-start;
    background-color: transparent;
  }

  .loaded {
    .app {
      opacity: 1;
    }
  }

  .app {
    position: relative;
    height: 100%;
    opacity: 0;

    &.vertical {
      display: inline-flex;
    }

    &.horizontal {
      display: flex;
      flex-direction: column;
    }

    &.switching-orientation * {
      transition: none !important;

      &::before,
      &::after {
        transition: none !important;
      }
    }

    *:focus {
      outline: none;
    }
  }

  img,
  a {
    user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
  }

  .draggable {
    -webkit-app-region: drag;
  }

  .toggle-content {
    @include transition("width", 0);
    height: 100%;
    width: 300px;
    overflow: hidden;
    visibility: visible;
    display: flex;
    flex-direction: column;

    // Bootsrap overrides
    .input-group {
      flex-wrap: nowrap;
    }

    &.hide {
      width: 0;
      border-right: 0 solid transparent;

      .action-menu-tool {
        opacity: 0;
      }
    }

    > .nav {
      overflow: auto;
    }

    h5 {
      white-space: nowrap;
      padding: 0 0.063rem;
    }

    .close-drawer {
      @include transition("color", 0);
      font-size: 0.688rem;
      margin-left: 0.125rem;
      margin-right: 0.3125rem;
      cursor: pointer;
      transform: rotate(90deg);
    }
  }

  .text-animation {
    @include text-animation("off", "left", 0);
    overflow: hidden;
    text-overflow: ellipsis;
    margin: 0 0.5rem;
  }

  .nav {
    &-item {
      &.hover {
        &::after {
          content: "";
          position: absolute;
          top: 0;
          right: 0;
          bottom: 0;
          left: 0;
          border: 1px solid var(--primary);
          cursor: pointer;
        }

        .nav-link {
          border-color: var(--t42-color-opacity-10);
          color: var(--t42-link-color);
          background-color: var(--t42-link-hover-bg);
        }
      }
    }

    &.nav-tabs {
      border-bottom: none;

      li {
        white-space: nowrap;
        flex-basis: 3rem;
        flex-shrink: 0;
      }

      .nav-item {
        user-select: none;
        position: relative;
        display: flex;
        flex-direction: column;

        &.is-active {
          .chevron {
            transform: rotate(180deg);
          }
        }
      }

      .nav-link {
        height: auto;
        border: 0;
        padding-left: 14px;
        flex-grow: 1;
        margin-right: 0;

        .icon-size-16,
        > img,
        .title-app,
        .title-folder {
          margin: 0 0.5rem;
        }

        img {
          @include transition("filter", "0");
        }
      }
    }

    &.flex-column {
      flex-wrap: nowrap;

      .nav-link {
        margin-bottom: 0 !important;
      }
    }

    .applications-nav {
      position: relative;
      overflow: hidden;

      i {
        @include transition("opacity, transform", 0);
      }

      &:hover,
      &.active {
        .icon-angle-down {
          opacity: 1;
        }
      }
    }

    .favorite {
      white-space: nowrap;
      flex-basis: 1.25rem !important;
      user-select: none;
      overflow: hidden;
      text-align: center;

      i {
        position: relative;
        z-index: 20;
        padding: 0 0.25rem;
      }

      &::after {
        content: "";
        height: 1px;
        left: 8px;
        position: absolute;
        width: calc(100% - 16px);
        bottom: 11px;
      }
    }

    #fav-apps {
      & > li:not(.nav-item) {
        @include transition("opacity", 0);
        opacity: 0;
        white-space: nowrap;
      }
    }

    ul.nav .nav-item .nav-link.active::before,
    ul.nav .nav-item .nav-link:hover::before {
      width: 0;
      height: 0;
    }

    .action-menu-tool {
      @include transition("opacity", 0);
      opacity: 0.65;
      margin-left: auto;

      .dropdown-menu {
        left: auto;
        right: 0;
        z-index: 20;
      }
    }

    .action-menu {
      cursor: pointer;
      overflow: hidden;

      .dropdown-menu {
        min-width: auto;
      }

      a {
        @include non-underline();
      }

      span:last-of-type {
        text-overflow: ellipsis;
        overflow: hidden;
        @include transition("opacity", 0);
      }

      .add-favorite {
        padding: 0;
        height: 2rem;
        width: 2rem;
      }

      &:hover {
        .action-menu-tool {
          opacity: 1;
        }
      }
    }

    .layout-menu-tool {
      @include transition("width", 0);
      display: flex;
      height: 3rem;
      padding: 0;
      opacity: 0;
      position: absolute;
      visibility: hidden;
      width: 100%;
      top: 0;

      li {
        display: flex;
        align-items: center;
        justify-content: center;
        flex: 1 1 auto;
        width: 100%;
        height: 100%;
        cursor: pointer;
      }
    }

    .show-actions {
      position: relative;
      flex-shrink: 0;

      &:hover,
      &.hover,
      &.active {
        i,
        .text-animation,
        .action-menu-tool,
        span {
          opacity: 0;
          visibility: hidden;
        }

        .layout-menu-tool {
          opacity: 1;
          visibility: visible;

          li {
            &:first-of-type {
              animation: runleft 300ms cubic-bezier(0.34, 0.03, 0.13, 0.93);
            }

            &:last-of-type {
              animation: runright 300ms cubic-bezier(0.34, 0.03, 0.13, 0.93);
            }
          }
        }
      }
    }
  }

  .nav-item[client-id],
  .nav-item[instrument-id] {
    .action-menu {
      cursor: initial;
    }

    .second-level .nav-link {
      cursor: pointer;
    }
  }

  .viewport {
    position: relative;
    z-index: 15;
    border: 1px solid rgba(255, 255, 255, 0.075);
    background-color: var(--t42-body);
    width: 60px;
    user-select: none;
    @include transition("width", 0);

    .menu {
      display: flex;

      .icon-window-minimize {
        font-size: 0.5rem;
      }

      .dropdown-menu {
        background-color: rgba(var(--t42-bg-light), 0.95);
      }
    }

    .viewport-header {
      align-items: center;
      display: flex;
      justify-content: space-between;
      padding-left: 1.125rem;
      padding-right: 0.25rem;
      position: relative;

      a {
        @include non-underline();
      }

      .menu {
        position: relative;

        .btn-icon {
          display: flex;
          align-items: center;
        }
      }

      .dropdown-menu {
        top: 35px;
        right: 0;
        left: auto;
      }

      .logo {
        width: 100%;
        margin-left: -3px;
        overflow: hidden;
      }
    }

    .accordion {
      .active-app {
        position: absolute;
        left: 57px;
      }
    }

    .viewport-footer {
      position: relative;
      margin-top: auto;

      .nav.nav-tabs {
        .nav-link {
          @include non-underline();
        }
      }

      .circle-index {
        @include transition("transform", "0");
        align-items: center;
        background-color: #2080d3;
        border-radius: 50%;
        display: flex;
        font-size: 0.5rem;
        height: 0.875rem;
        justify-content: center;
        margin-left: 0.875rem;
        margin-top: -0.375rem;
        position: absolute;
        transform: scale(1);
        width: 0.875rem;

        &.empty {
          transform: scale(0);
        }
      }
    }
  }

  .modal.fade {
    display: block;
    width: 200px;
    visibility: hidden;

    .about-logo {
      width: 2.5rem;
      overflow: hidden;
      margin: 0 auto;
    }

    .modal-fill-in {
      justify-content: flex-start;

      .modal-header .close {
        position: absolute;
        right: 1rem;
        top: 1rem;
      }
    }

    &.show {
      visibility: visible;
    }
  }

  .active-app {
    margin-left: -14px;
  }

  [app-name] {
    &.nav-item.fav-app {
      i.icon-star-empty-1 {
        display: none;
      }
    }

    &.nav-item:not(.fav-app) {
      i.icon-star-full {
        display: none;
      }
    }
  }

  @import "select";
  @import "vertical";
  @import "horizontal";
}

.app-active {
  position: relative;
  background-color: rgba(255, 255, 255, 0.025);

  &::before {
    content: "";
    width: 3px;
    position: absolute;
    top: 30%;
    bottom: 30%;
    left: 0;
    background-color: #2080d3;
    transition: top 0.3s cubic-bezier(0.34, 0.03, 0.13, 0.93),
      bottom 0.3s cubic-bezier(0.34, 0.03, 0.13, 0.93);
  }

  &:hover {
    &::before {
      top: 0;
      bottom: 0;
    }
  }
}

